kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: bmonkman/finn-api:latest
          resources:
            requests:
              memory: 64Mi
              cpu: 0.01
            limits:
              memory: 128Mi
              cpu: 0.5
          livenessProbe:
            httpGet:
              port: http
              path: v1/status/alive
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: http
              path: v1/status/ready
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          ports:
            - containerPort: 80
              name: http
