kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app: user-service
